--- a/app/scss/layout/_section.scss
+++ b/app/scss/layout/_section.scss
@@ -37,6 +37,7 @@
         z-index: 1;
     }
     &__note {
+        margin: 0;
         font-size: 1.4rem;
         color: $dark-600;
         line-height: 1.85;
