--- a/app/scss/layout/_make-help-template.scss
+++ b/app/scss/layout/_make-help-template.scss
@@ -68,6 +68,9 @@
             &:not(:last-child) {
                 margin-bottom: 35px;
             }
+            &:first-child {
+                padding-right: 0;
+            }
         }
     }
 }
@@ -107,6 +110,15 @@
                 &:not(:last-child) {
                     margin-bottom: 20px;
                 }
+            }
+        }
+    }
+}
+@media screen and (max-width: 575px) {
+    .make-help-template {
+        &__col {
+            &:first-child {
+                padding-right: 15px;
             }
         }
     }
