--- a/app/scss/components/_team-item.scss
+++ b/app/scss/components/_team-item.scss
@@ -79,12 +79,12 @@ $team-item-br: 10px;
             }
         }
         &__name {
-            font-size: 1.6rem;
+            font-size: 1.8rem;
         }
         &__desc {
             margin-top: 10px;
             & p {
-                font-size: 1.4rem;
+                font-size: 1.6rem;
             }
         }
     }
@@ -114,7 +114,7 @@ $team-item-br: 10px;
         }
         &__desc {
             & p {
-                font-size: 1.2rem;
+                // font-size: 1.2rem;
             }
         }
     }
