--- a/public/css/application.css
+++ b/public/css/application.css
@@ -6241,7 +6241,10 @@ table {
     color: #612B69;
     -ms-flex-item-align: center;
         align-self: center;
-    margin-right: 25px; }
+    margin-right: 25px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    max-width: 96px; }
   .help-form__wrapper {
     padding: 50px 45px; }
   .help-form__instance {
@@ -6284,7 +6287,8 @@ table {
     margin: 0;
     -ms-flex-item-align: start;
         align-self: flex-start;
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    max-width: none; }
   .help-form__instance {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -6699,11 +6703,11 @@ table {
     .team-item__img_size-m {
       height: 175px; }
   .team-item__name {
-    font-size: 1.6rem; }
+    font-size: 1.8rem; }
   .team-item__desc {
     margin-top: 10px; }
     .team-item__desc p {
-      font-size: 1.4rem; } }
+      font-size: 1.6rem; } }
 
 @media screen and (max-width: 767px) {
   .team-item__img {
@@ -6716,9 +6720,7 @@ table {
     height: 85vw;
     max-width: none; }
     .team-item__img_size-m {
-      height: 85vw; }
-  .team-item__desc p {
-    font-size: 1.2rem; } }
+      height: 85vw; } }
 
 .m-menu-btn {
   display: -webkit-box;
