--- a/app/scss/layout/_template.scss
+++ b/app/scss/layout/_template.scss
@@ -8,6 +8,7 @@
         margin-bottom: 10px;
     }
     &__title {
+        font-family: $font-title;
         margin: 0;
         font-size: 3.7rem;
         color: $primary;
