--- a/app/scss/layout/_section.scss
+++ b/app/scss/layout/_section.scss
@@ -13,6 +13,7 @@
         }
     }
     &__title {
+        font-family: $font-title;
         margin: 0;
         font-size: 3.5rem;
         font-weight: 600;
